# Dashboard

./: .gitignore  README.md  anti.md  docker-compose.yml
.cursor/: mcp.json
backend/ai_agent/: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  HANDOVER_FRONTEND.md  README.md  pyproject.toml  requirements.txt
backend/ai_agent/app/: __init__.py  config.py  fallback.py  llm_client.py  main.py  output_parser.py  retry.py  safety.py  schemas.py  security.py  security_rate_limit.py
backend/ai_agent/docs/: backend_architecture_diagram.md
backend/ai_agent/scripts/: create_supabase_langgraph_checkpoints.sql  create_supabase_langgraph_store.sql  migrate_mimic_to_supabase.py  seed_patient_directory.py
backend/ai_agent/tests/: __init__.py  test_agent_endpoints.py  test_agent_requests.py  test_agent_service.py  test_agent_service_factory.py  test_chat_memory_policy.py  test_chat_memory_workflow.py  test_container.py  test_fallback.py  test_generation_service.py  test_legacy_service_facades.py  test_llm_client.py  test_output_parser.py  test_prompt_builder.py  test_prompts.py  test_retry.py  test_safety.py  test_schemas.py  test_tools.py  test_workflows.py
backend/ingestion/: __init__.py  __main__.py  cleaner.py  consumer.py  db_connector.py  mock_producer.py  pipeline.py  pyproject.toml
backend/ingestion/app/: __init__.py  config.py  his_adapter.py  main.py  schema.py
backend/ingestion/graphify-out/: GRAPH_REPORT.md  graph.html
backend/ingestion/scripts/: load_vitals.py
backend/ingestion/tests/: test_his_adapter.py  test_schema.py
(+730 files in other folders)
