[project]
name = "ai-agent"
version = "0.1.0"
description = "FastAPI service cho Team 5 AI Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "openai>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tenacity>=8.0.0,<10.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "langgraph-checkpoint-postgres>=2.0.0,<3.0.0",
    "psycopg[binary,pool]>=3.2.0,<4.0.0",
    "PyJWT[crypto]>=2.8.0,<3.0.0",
    "exa-py>=1.0.0",
    "langfuse>=4.0.0,<5.0.0",
]
