[project]
name = "caresignal-ingestion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "aio-pika>=9.5,<10",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.34,<1",
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
